<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/flat_white"
    app:layoutDescription="@xml/activity_main_scene">

    <ImageView
        android:id="@+id/imageMandelaTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/a_mandala_image"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/mandela" />

    <ImageView
        android:id="@+id/imageHeader"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/header_height"
        android:layout_marginTop="@dimen/margin_medium"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:contentDescription="@string/ramadan_kareem_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header" />

    <ImageView
        android:id="@+id/imagePhanos"
        android:layout_width="@dimen/phanos_width"
        android:layout_height="@dimen/phanos_height"
        app:layout_constraintBottom_toTopOf="parent"
        android:contentDescription="@string/a_lantern_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageHeader"
        app:srcCompat="@drawable/phanos_1" />

    <ImageView
        android:id="@+id/starTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imagePhanos"
        app:layout_constraintHorizontal_bias="0.824"
        android:contentDescription="@string/a_star_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageHeader"
        app:layout_constraintVertical_bias="0.172"
        app:srcCompat="@drawable/stars" />

    <ImageView
        android:id="@+id/imageMandelaOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/a_mandala_image"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/mandela" />

    <ImageView
        android:id="@+id/starOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toStartOf="@+id/starTwo"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/a_star_image"
        app:layout_constraintTop_toBottomOf="@+id/imageHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/stars" />

    <ImageView
        android:id="@+id/starThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/a_star_image"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="@+id/imageHeader"
        app:srcCompat="@drawable/stars" />

    <ImageView
        android:id="@+id/imageMoon"
        android:layout_width="@dimen/moon_width"
        android:layout_height="@dimen/moon_height"
        android:rotation="90"
        android:contentDescription="@string/a_crescent_moon_image"
        app:layout_constraintBottom_toTopOf="@+id/imageMandelaTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageHeader"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/half_moon" />

    <ImageView
        android:id="@+id/imageDoaa"
        android:layout_width="@dimen/doaa_width_height"
        android:layout_height="@dimen/doaa_width_height"
        android:contentDescription="@string/doaa"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/doaa" />
</androidx.constraintlayout.motion.widget.MotionLayout>